force-app/main/default/objects/Attendance__c/Attendance__c.object-meta.xml
<CustomObject>
    <description>Created by BN
For: Geekwise User
Function: Track student attendance in classes. Could be used for events later.
Populated by: User either manually or through Instructor Portal.</description>
    <label>Attendance</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attendance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>