force-app/main/default/objects/Attendance__c/fields/Attendance_Display__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Display__c</fullName>
    <formula>IF( Present__c = True, &quot;P&quot;, &quot;A&quot;)</formula>
    <label>Attendance Display</label>
    <type>Text</type>
</CustomField>