force-app/main/default/objects/Attendance__c/fields/Is_Attendance_Marked__c.field-meta.xml
<CustomField>
    <fullName>Is_Attendance_Marked__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To track whether attendance is marked or not.</description>
    <label>Is Attendance Marked</label>
    <type>Checkbox</type>
</CustomField>