force-app/main/default/objects/Attendance__c/fields/Present__c.field-meta.xml
<CustomField>
    <fullName>Present__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Created By BN
For GW Users
Track student attendance
Populated manually</description>
    <label>Present</label>
    <type>Checkbox</type>
</CustomField>