force-app/main/default/objects/Attendance__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created By BN
For GW Users
Track student attendance
Populated manually</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>