force-app/main/default/objects/Attendance__c/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <description>BN
GW Users
To provide a link to the survey for email templates
Populated by formula</description>
    <formula>&apos;https://bitwiseindustries.secure.force.com/GwStudentSurvey?id=&apos;+ Student__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Link</label>
    <type>Text</type>
</CustomField>