force-app/main/default/objects/Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Class_Name__c</columns>
    <columns>Registration__c</columns>
    <columns>Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Student__c</columns>
    <columns>Present__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>BW_Executive_Team</group>
        <group>Tech_Support_Team</group>
        <group>VP_Team</group>
    </sharedTo>
</ListView>