force-app/main/default/objects/Attendance__c/listViews/Attendances_Logs.listView-meta.xml
<ListView>
    <fullName>Attendances_Logs</fullName>
    <columns>Date__c</columns>
    <columns>Student__c</columns>
    <columns>Present__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Attendances/Logs Today</label>
    <sharedTo>
        <group>BW_Executive_Team</group>
        <group>Tech_Support_Team</group>
        <group>VP_Team</group>
        <group>Workforce_Training_Team</group>
    </sharedTo>
</ListView>