force-app/main/default/objects/Attendance__c/listViews/My_Attendance.listView-meta.xml
<ListView>
    <fullName>My_Attendance</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Student__c</columns>
    <columns>Date__c</columns>
    <columns>Present__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Attendance</label>
</ListView>